# GPU

./: main  main.cu  naive_tiledCPU.cpp  naive_tiledCPU.hpp  naive_tiledGPU.cu  naive_tiledGPU.hpp  naive_viewtestCPU.cpp  naive_viewtestCPU.hpp  naive_viewtestGPU.cu  naive_viewtestGPU.hpp  ppm.cpp  programme
code/CPU/: naive_viewsetCPU.cpp  naive_viewsetCPU.hpp
code/GPU/: naive_viewsetGPU.cu  naive_viewsetGPU.hpp  optimized2_viewsetGPU.cu  optimized2_viewsetGPU.hpp  optimized_viewsetGPU.cu  optimized_viewsetGPU.hpp
code/GPU/naive/: naive_viewsetGPU.cu  naive_viewsetGPU.hpp  optimized2_viewsetGPU.cu  optimized2_viewsetGPU.hpp  optimized_viewsetGPU.cu  optimized_viewsetGPU.hpp
code/GPU/tiled/: naive_tiledGPU.cu  naive_tiledGPU.hpp
ex1/: Makefile  main.cu  prog  programme  reference.cpp  reference.hpp  student.cu  student.hpp
ex1/utils/: ppm.cpp  ppm.hpp
ex2/: CMakeLists.txt
ex2/include/: generator.hpp  main.hpp
ex2/include/references/: referenceCPU.hpp  referenceGPU.hpp
ex2/src/: main.cpp
ex2/src/references/: referenceCPU.cpp  referenceGPU.cu
ex2/src/utils/: chronoCPU.cpp  chronoGPU.cu
img/Result/CPU/: 1.input.ppm  LimousinCPU.ppm
img/Result/GPU/: LimousinGPU.ppm  LimousinGPU2.ppm  LimousinGPUfail2.ppm  LimousinGPUfail3.ppm  LimousinGPUfail4.ppm  LimousinGPUfail5.ppm  LimousinGPUfail6.ppm  LimousinGPUffail.ppm  LimousinGPUv2fail1.ppm  LimousinGPUv3.ppm  TiledGPU.ppm
los/: ppm.hpp
